--- a/test.ipynb
+++ b/test.ipynb
@@ -621,7 +621,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Hello\")"
+   ]
   }
  ],
  "metadata": {
